@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-02T01:07:17Z",
-  "count_outdated" : 860,
-  "uniques_outdated" : 467,
-  "count" : 874,
-  "uniques" : 481,
+  "timestamp" : "2025-03-03T01:05:40Z",
+  "count_outdated" : 861,
+  "uniques_outdated" : 468,
+  "count" : 875,
+  "uniques" : 482,
   "clones" : [
-    {
-      "timestamp": "2025-02-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-18T00:00:00Z",
       "count": 1,
@@ -112,6 +103,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-03-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
