@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-02-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-02-18T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -61,6 +56,11 @@
       "timestamp": "2025-03-01T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-03-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
