@@ -1,3 +1,12 @@
+2025-03-03T01:05:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13621255540 # 582
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-03
+* notice: last 14d: unq all: 4 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 467 860 / 481 874
+* notice: next accum: outdated-unq outdated-all / unq all: 468 861 / 482 875
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-02-17] / [2025-03-02]
+
 2025-03-02T01:07:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13610594184 # 581
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-02
